crates/ink/tests/ui/contract/fail/constructor-abi.stderr
error: ink! constructors must not have explicit ABI
 --> tests/ui/contract/fail/constructor-abi.rs:8:13
  |
8 |         pub extern "C" fn constructor() -> Self {
  |             ^^^^^^^^^^
